core/force-app/main/default/objects/NotificationLog__c/NotificationLog__c.object-meta.xml
<CustomObject>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>N{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>