core/force-app/main/default/objects/NotificationLog__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Entity ID of the Gateway Log</description>
    <label>EntityId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>