core/force-app/main/default/objects/NotificationLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error Message of the Gateway Log</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>