core/force-app/main/default/objects/NotificationLog__c/fields/GatewayMessage__c.field-meta.xml
<CustomField>
    <fullName>GatewayMessage__c</fullName>
    <description>Gateway Message of the Gateway Log</description>
    <label>Gateway Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>