core/force-app/main/default/objects/NotificationLog__c/fields/InteractionType__c.field-meta.xml
<CustomField>
    <fullName>InteractionType__c</fullName>
    <description>Interaction Type of the Gateway Log</description>
    <label>Interaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>