core/force-app/main/default/objects/NotificationLog__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference of the Gateway Log</description>
    <label>Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>