core/force-app/main/default/objects/NotificationLog__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Request of the Gateway Log</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>