core/force-app/main/default/objects/NotificationLog__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Response of the Gateway Log</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>