core/force-app/main/default/objects/NotificationLog__c/fields/ResultCode__c.field-meta.xml
<CustomField>
    <fullName>ResultCode__c</fullName>
    <description>Result Code of the Gateway Log</description>
    <label>Result Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>